--- a/fulldigitrecog.ipynb
+++ b/fulldigitrecog.ipynb
@@ -720,7 +720,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# FULL TESTING"
+    "# FULL TESTING\n",
+    "```\n",
+    "here all input images will be converted to black and white so images can be easy to be predicted\n",
+    "```"
    ]
   },
   {
@@ -801,35 +804,6 @@
     "print(p)\n",
     "print(p[0])"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Conclusion\n",
-    "\n",
-    "```\n",
-    "1.jpg\n",
-    "3.png\n",
-    "5.png\n",
-    "```\n",
-    "\n",
-    "## ARE NOT GETTING DETECTED"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### There was no augmentation in this project."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
