--- a/ML files/fulldigitrecog.ipynb
+++ b/ML files/fulldigitrecog.ipynb
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +565,7 @@
     }
    ],
    "source": [
-    "model = tf.keras.models.load_model('kfulldrmodeldigit')\n",
+    "model = tf.keras.models.load_model('..\\models\\kfulldrmodeldigit')\n",
     "model.summary()"
    ]
   },
@@ -584,7 +584,7 @@
     }
    ],
    "source": [
-    "img = load_img(\"2.jpg\")\n",
+    "img = load_img(\"..\\static\\img\\uploads\\2.jpg\")\n",
     "print(type(img))\n",
     "#now converting the image in form of array\n",
     "img = img_to_array(img)\n",
@@ -732,7 +732,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "originalImage = cv2.imread('7.png')\n",
+    "originalImage = cv2.imread('..\\static\\img\\uploads\\7.png')\n",
     "grayImage = cv2.cvtColor(originalImage, cv2.COLOR_BGR2GRAY)\n",
     "\n",
     "(thresh, blackAndWhiteImage) = cv2.threshold(grayImage, 127, 255, cv2.THRESH_BINARY)\n",
@@ -786,7 +786,9 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -803,6 +805,15 @@
     "print(type(p))\n",
     "print(p)\n",
     "print(p[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Things to be added\n",
+    "- Add boxes around the image detected\n",
+    "- Add realtime detection"
    ]
   }
  ],
